# llmfit-web

./: .gitignore  deep-research-report.md  project.md
backend/: .coverage  .env.example  pyproject.toml  requirements.txt  seed_news.py
backend/alembic/: env.py
backend/alembic/versions/: 20260604_news_posts_table.py  8c0970b40e24_initial_models_and_gpu_specs_tables.py
backend/scripts/: crawl_gpus.py  crawl_models.py  seed.py
backend/src/: main.py
backend/src/api/: dependencies.py  gpus.py  models.py  news.py  recommend.py  router.py
backend/src/core/: config.py  database.py  exceptions.py
backend/src/data/: mock_gpu_specs.json  mock_models.json  news_posts.json
backend/src/models/: __init__.py
backend/src/repositories/: interfaces.py  json_gpu_repository.py  json_model_repository.py  json_news_repository.py  sql_gpu_repository.py  sql_model_repository.py  sql_news_repository.py
backend/src/schemas/: common.py  hardware.py  model.py  news.py  recommendation.py
backend/src/services/: gpu_crawler.py  gpu_mapper.py  model_crawler.py  recommendation_engine.py
backend/src/services/scoring/: __init__.py  speed.py  (+3 more)
backend/src/utils/: gpu_name.py  vram.py
backend/tests/: conftest.py
backend/tests/test_repositories/: test_json_gpu_repository.py  test_json_model_repository.py  test_sql_gpu_repository.py  test_sql_model_repository.py
backend/tests/test_schemas/: test_hardware_schema.py  test_recommendation_schema.py
backend/tests/test_services/: test_gpu_crawler.py  test_gpu_mapper.py  test_model_crawler.py  test_recommendation_engine.py  test_vram.py
(+105 files in other folders)
